tests/jastadd/negative/name_errors/L4/2_RecordDecl.ob
MODULE TestModule;
	VAR a : RECORD a : INTEGER; a : INTEGER END;
END TestModule.
